--- a/env.example
+++ b/env.example
@@ -1,9 +1,10 @@
 # Database Configuration
-POSTGRES_HOST=postgres
-POSTGRES_PORT=5432
-POSTGRES_DB=webown
-POSTGRES_USER=webown
-POSTGRES_PASSWORD=webown_password
+MYSQL_HOST=mysql
+MYSQL_PORT=3306
+MYSQL_DB=webown
+MYSQL_USER=webown
+MYSQL_PASSWORD=webown_password
+MYSQL_ROOT_PASSWORD=root_password
 
 # Redis Configuration
 REDIS_HOST=redis
