--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ selenium==4.15.2
 
 # Database
 sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
+PyMySQL==1.1.0
+cryptography==41.0.7
 alembic==1.12.1
 
 # Scheduler
