--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ version: '3.8'
 services:
   mysql:
     image: mysql:8.4.3
-    container_name: webown_mysql
     environment:
       MYSQL_DATABASE: ${MYSQL_DB:-webown}
       MYSQL_USER: ${MYSQL_USER:-webown}
@@ -13,37 +12,19 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-    healthcheck:
-      test: ["CMD", "sh", "-c", "mysqladmin ping -h localhost -u root -p$$MYSQL_ROOT_PASSWORD || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 10s
-    command: --default-authentication-plugin=mysql_native_password
 
   redis:
     image: redis:7-alpine
-    container_name: webown_redis
     ports:
       - "6379:6379"
-    volumes:
-      - redis_data:/data
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   app:
     build:
       context: .
-      dockerfile: Dockerfile
-    container_name: webown_app
+      dockerfile: dockerfile
     depends_on:
-      mysql:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
+      - mysql
+      - redis
     environment:
       - MYSQL_HOST=mysql
       - MYSQL_PORT=3306
@@ -57,7 +38,6 @@ services:
       - ./app:/app
       - ./logs:/app/logs
     command: python main.py
-    restart: unless-stopped
 
 volumes:
   mysql_data:
